Settings: Align user avatar with homepage title
[ghostrider-reborn: adapt to s-v2]

Change-Id: I2693a1f19a46bc6d0df8596e12bea8ca19914f13
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -137,13 +137,15 @@
     <dimen name="search_bar_title_padding_start_regular_two_pane">8dp</dimen>
 
     <!-- Avatar -->
-    <dimen name="avatar_length">48dp</dimen>
+    <dimen name="avatar_length">60dp</dimen>
     <dimen name="avatar_margin_top">56dp</dimen>
     <dimen name="avatar_margin_end">24dp</dimen>
     <dimen name="multiple_users_avatar_size">20dp</dimen>
     <dimen name="multiple_users_user_icon_size">40dp</dimen>
 
     <!-- Homepage -->
+    <!-- avatar_length + avatar_margin_top -->
+    <dimen name="homepage_title_margin_top">104dp</dimen>
     <dimen name="homepage_title_margin_bottom">8dp</dimen>
     <dimen name="homepage_title_margin_horizontal">24dp</dimen>
     <dimen name="homepage_padding_horizontal_two_pane">24dp</dimen>
